--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.tslint": true,
+    "source.fixAll.stylelint": true
+  },
   "workbench.colorCustomizations": {
     "activityBar.background": "#d47171",
     "titleBar.activeBackground": "#fd9191",
