--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "target": "es2015",
     "allowSyntheticDefaultImports": true,
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"],
+    "lib": ["es2018", "dom"]
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
