Add release shell script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "release": "./make-release.sh"
   },
   "private": true,
   "homepage": "https://github.com/onuradsay/maple",
