--- a/package.json
+++ b/package.json
@@ -1,69 +1,30 @@
 {
   "name": "maple",
-  "description": "",
-  "version": "0.2.4",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "release": "sh make-release.sh"
-  },
+  "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/onuradsay/maple",
-  "keywords": [
-    "sass",
-    "scss",
-    "maple"
+  "type": "module",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
   ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/onuradsay/maple.git"
-  },
-  "bugs": {
-    "url": "https://github.com/onuradsay/maple/issues"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/onuradsay/maple/blob/master/LICENSE"
-    }
-  ],
-  "dependencies": {
-    "@angular/animations": "~9.1.12",
-    "@angular/common": "~9.1.12",
-    "@angular/compiler": "~9.1.12",
-    "@angular/core": "~9.1.12",
-    "@angular/forms": "~9.1.12",
-    "@angular/router": "~9.1.12",
-    "@angular/platform-browser": "~9.1.12",
-    "@angular/platform-browser-dynamic": "~9.1.12",
-    "@angular/platform-server": "~9.1.12",
-    "rxjs": "~6.6.3",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.3"
+  "sideEffects": false,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest --browser"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.15",
-    "@angular-devkit/build-ng-packagr": "~0.901.12",
-    "@angular/cli": "~9.1.12",
-    "@angular/compiler-cli": "~9.1.12",
-    "@types/jasmine": "~3.3.8",
-    "@types/node": "^8.10.64",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage": "~2.0.1",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^9.1.3",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tsickle": "^0.37.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.8.3"
-  }
+    "@types/node": "^18.0.0",
+    "@vitest/browser-playwright": "^4.0.16",
+    "playwright": "^1.57.0",
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3",
+    "vite": "^7.3.0",
+    "vite-tsconfig-paths": "^6.0.2",
+    "vitest": "^4.0.16"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
