module support and withour dom support added

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,9 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist/esm",
+    "outDir": "./dist",
     "declaration": true,
-    "declarationDir": "dist/types"
+    "emitDeclarationOnly": true,
+    "declarationDir": "./dist/types"
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
