--- a/package.json
+++ b/package.json
@@ -1,18 +1,28 @@
 {
   "name": "maple",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "type": "module",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/types/src/index.d.ts",
+  "exports": {
+    ".": {
+      "types": {
+        "import": "./dist/types/src/index.d.ts",
+        "require": "./dist/types/src/index.d.cts"
+      },
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "files": [
     "dist"
   ],
   "sideEffects": false,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "rm -rf dist && BUILD_TYPE=lib vite build && BUILD_TYPE=runtime vite build && tsc -p tsconfig.build.json && find dist/types -name '*.d.ts' -exec sh -c 'cp \"$1\" \"${1%.d.ts}.d.cts\"' _ {} \\;",
     "preview": "vite preview",
     "test": "vitest --browser"
   },
@@ -21,6 +31,7 @@
     "@vitest/browser-playwright": "^4.0.16",
     "playwright": "^1.57.0",
     "tslib": "^2.8.1",
+    "tsx": "4.19.2",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vite-tsconfig-paths": "^6.0.2",
