--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,7 +6,5 @@
     "emitDeclarationOnly": true,
     "declarationDir": "./dist/module/types"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
