--- a/package.json
+++ b/package.json
@@ -25,19 +25,19 @@
     "build": "rm -rf dist && BUILD_TYPE=lib vite build && BUILD_TYPE=runtime vite build && tsc -p tsconfig.build.json && find dist/module/types -name '*.d.ts' -exec sh -c 'cp \"$1\" \"${1%.d.ts}.d.cts\"' _ {} \\;",
     "preview": "vite preview",
     "test": "vitest --browser",
-    "prettier:fix": "prettier --write . --ignore-path .gitignore"
+    "prettier:fix": "prettier --write . --ignore-path .gitignore",
+    "preversion": "npm run test && npm run build"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
+    "@types/node": "^25.0.3",
     "@vitest/browser-playwright": "^4.0.16",
     "playwright": "^1.57.0",
     "prettier": "^3.7.4",
     "tslib": "^2.8.1",
-    "tsx": "4.19.2",
+    "tsx": "4.21.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
-    "vite-tsconfig-paths": "^6.0.2",
+    "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^4.0.16"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
