--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maple",
+  "name": "@f12io/maple",
   "version": "0.1.0",
   "private": false,
   "type": "module",
@@ -22,7 +22,11 @@
   "sideEffects": false,
   "scripts": {
     "dev": "vite",
-    "build": "rm -rf dist && BUILD_TYPE=lib vite build && BUILD_TYPE=runtime vite build && tsc -p tsconfig.build.json && find dist/module/types -name '*.d.ts' -exec sh -c 'cp \"$1\" \"${1%.d.ts}.d.cts\"' _ {} \\;",
+    "clean": "rimraf dist",
+    "build:module": "cross-env BUILD_TYPE=lib vite build",
+    "build:runtime": "cross-env BUILD_TYPE=runtime vite build",
+    "build:types": "tsc -p tsconfig.build.json && node scripts/copy-dts.js",
+    "build": "npm run clean && npm run build:module && npm run build:runtime && npm run build:types",
     "preview": "vite preview",
     "test": "vitest --browser",
     "prettier:fix": "prettier --write . --ignore-path .gitignore",
@@ -31,8 +35,10 @@
   "devDependencies": {
     "@types/node": "^25.0.3",
     "@vitest/browser-playwright": "^4.0.16",
+    "cross-env": "^10.1.0",
     "playwright": "^1.57.0",
     "prettier": "^3.7.4",
+    "rimraf": "^6.1.2",
     "tslib": "^2.8.1",
     "tsx": "4.21.0",
     "typescript": "^5.9.3",
