--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "build:types": "tsc -p tsconfig.build.json && node scripts/copy-dts.js",
     "build": "npm run clean && npm run build:module && npm run build:runtime && npm run build:types",
     "preview": "vite preview",
-    "test": "vitest --browser",
+    "test": "npm run test:node && npm run test:browser",
+    "test:browser": "vitest --browser",
+    "test:node": "vitest run tests/node-env.spec.ts --browser.enabled=false",
     "prettier:fix": "prettier --write . --ignore-path .gitignore",
     "preversion": "npm run test && npm run build"
   },
