Refactor engine to use parser-serializer architecture
- Replace legacy registry implementation with optimized parser/serializer
- Add precalculated property abbreviations for runtime performance
- Update build tooling and vite config for new plugin structure
- Remove old engine and variant logic
- Add eslint
- Refactor project structure and update tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-  "editor.formatOnSave": true,
   "editor.tabSize": 2,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
-    "source.fixAll.tslint": "explicit",
-    "source.fixAll.stylelint": "explicit"
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "explicit"
   },
   "workbench.colorCustomizations": {
     "activityBar.background": "#0000f1",
