--- a/package.json
+++ b/package.json
@@ -25,25 +25,29 @@
     "clean": "rimraf dist",
     "build:module": "cross-env BUILD_TYPE=lib vite build",
     "build:runtime": "cross-env BUILD_TYPE=runtime vite build",
-    "build:types": "tsc -p tsconfig.build.json && node scripts/copy-dts.js",
+    "build:types": "tsc -p tsconfig.build.json && tsx scripts/copy-dts.ts",
     "build": "npm run clean && npm run build:module && npm run build:runtime && npm run build:types",
     "preview": "vite preview",
-    "test": "npm run test:node && npm run test:browser",
-    "test:browser": "vitest --browser",
-    "test:node": "vitest run tests/node-env.spec.ts --browser.enabled=false",
+    "test": "vitest --browser",
+    "lint": "eslint .",
     "prettier:fix": "prettier --write . --ignore-path .gitignore",
-    "preversion": "npm run test && npm run build"
+    "preversion": "npm run lint && npm run test && npm run build"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^25.0.3",
     "@vitest/browser-playwright": "^4.0.16",
     "cross-env": "^10.1.0",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^16.5.0",
     "playwright": "^1.57.0",
     "prettier": "^3.7.4",
     "rimraf": "^6.1.2",
     "tslib": "^2.8.1",
     "tsx": "4.21.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.50.1",
     "vite": "^7.3.0",
     "vite-tsconfig-paths": "^6.0.3",
     "vitest": "^4.0.16"
